[package]
name = "mypallet"
version = "2.0.0-rc2"
authors = ["lome <1209518758@qq.om>"]
edition = "2018"

[dependencies.sp-std]
git = "https://github.com/paritytech/substrate.git"
defaut-features = false
tag = "v2.0.0-rc2"

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.3.0"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc2"
version = "2.0.0-rc2"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc2"
version = "2.0.0-rc2"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc2"
version = "2.0.0-rc2"

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std"
]

